--- a/index.html
+++ b/index.html
@@ -94,5 +94,6 @@
     <div class="footer">
       <h3>Copyright 2022 by Brandon. All rights reserved.</h3>
     </div>
+    <div></div>
   </body>
 </html>
