Changed background color and removed image

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <br />
         <div class="imgph">Image</div>
         <br />
-        <div class="imgph">Image</div>
+        <!-- <div class="imgph">Image</div> -->
       </div>
 
       <div class="right">
